--- a/h5/src/h5/src/styles/components/item-engine/slide-btn.scss
+++ b/h5/src/h5/src/styles/components/item-engine/slide-btn.scss
@@ -13,7 +13,7 @@
     border-radius: 50%;
     box-sizing: border-box;
     color: rgba(154, 154, 154, 1);
-    z-index: 999;
+    z-index: 999 !important;
   }
   
   .right-slide__btn {
@@ -29,7 +29,7 @@
     border-radius: 50%;
     box-sizing: border-box;
     color: rgba(154, 154, 154, 1);
-    z-index: 999;
+    z-index: 999 !important;
   }
   
   .icon-arrow-left, .icon-arrow-right {
