--- a/app/Resources/views/admin-v2/teach/course-set/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/course-set/index.html.twig
@@ -59,7 +59,8 @@
     <span class="mrl">{{ 'admin.course_manage.manage.count'|trans({'%courseNum%':courseSetStatusNum.total})|raw }}</span>
     <span class="mrl">{{ 'admin.course_manage.manage.published_count'|trans({'%publishedNum%':courseSetStatusNum.published})|raw }}</span>
     <span class="mrl">{{ 'admin.course_manage.manage.closed_count'|trans({'%closedNum%':courseSetStatusNum.closed})|raw }}</span>
-    <span class="mrl">{{ 'admin.course_manage.manage.unpublish_count'|trans({'%unPublishedNum%':courseSetStatusNum.draft})|raw }}</span>
+    <span class="mrl">{{ 'admin.course_manage.manage.draft_count'|trans({'%draftNum%':courseSetStatusNum.draft})|raw }}</span>
+    <span class="mrl">{{ 'admin.course_manage.manage.unpublish_count'|trans({'%unPublishedNum%':courseSetStatusNum.unpublished})|raw }}</span>
   </p>
 
   <table class="table table-striped table-hover" id="course-table" style="word-break:break-all;">
