--- a/app/Resources/views/content/page-show.html.twig
+++ b/app/Resources/views/content/page-show.html.twig
@@ -13,7 +13,7 @@
   <div class="section-header"><h1>{{ content.title }}</h1></div>
 
   {% if content.body %}
-    <div class="editor-text">
+    <div class="editor-text" style="display: inline-block; height: auto;">
   	  {{ content.body|cdn|raw }}
     </div>
   {% else %}
