--- a/app/Resources/views/common/upload-image.html.twig
+++ b/app/Resources/views/common/upload-image.html.twig
@@ -19,5 +19,5 @@
     data-crop-width="{{ cropWidth }}"
     data-crop-height="{{ cropHeight }}" />
   </label>
-  <input type="hidden" name="crop_image_attr">
+  <input type="hidden" name="crop_image_attr" value="{{imageSrc}}">
 </div>
