feat: #101645 班级题库加入下架数据联动

--- a/app/Resources/views/admin-v2/teach/classroom/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/classroom/index.html.twig
@@ -44,7 +44,9 @@
     <span
         class="mrl">{{ 'admin.classroom_manage.manage.closed_count'|trans({'%closedNum%':classroomStatusNum.closed})|raw }}</span>
     <span
-        class="mrl">{{ 'admin.classroom_manage.manage.unpublish_count'|trans({'%unPublishedNum%':classroomStatusNum.draft})|raw }}</span>
+        class="mrl">{{ 'admin.classroom_manage.manage.draft_count'|trans({'%draftNum%':classroomStatusNum.draft})|raw }}</span>
+    <span
+      class="mrl">{{ 'admin.classroom_manage.manage.unpublish_count'|trans({'%unPublishedNum%':classroomStatusNum.unpublished})|raw }}</span>
   </p>
 
   {% if classroomInfo %}
