--- a/app/Resources/views/admin-v2/teach/item-bank-exercise/index.html.twig
+++ b/app/Resources/views/admin-v2/teach/item-bank-exercise/index.html.twig
@@ -43,7 +43,8 @@
     <span class="mrl">{{ 'admin.item_bank_exercise.manage.count'|trans({'%exerciseNum%':exercisesStatusNum.total})|raw }}</span>
     <span class="mrl">{{ 'admin.course_manage.manage.published_count'|trans({'%publishedNum%':exercisesStatusNum.published})|raw }}</span>
     <span class="mrl">{{ 'admin.course_manage.manage.closed_count'|trans({'%closedNum%':exercisesStatusNum.closed})|raw }}</span>
-    <span class="mrl">{{ 'admin.course_manage.manage.unpublish_count'|trans({'%unPublishedNum%':exercisesStatusNum.draft})|raw }}</span>
+    <span class="mrl">{{ 'admin.course_manage.manage.draft_count'|trans({'%draftNum%':exercisesStatusNum.draft})|raw }}</span>
+    <span class="mrl">{{ 'admin.course_manage.manage.unpublish_count'|trans({'%unPublishedNum%':exercisesStatusNum.unpublished})|raw }}</span>
   </p>
 
   <table class="table table-striped table-hover" id="exercise-table" style="word-break:break-all;">
