fix: #76881 fix: #76881 修复课程班级题库封面保存即更新

--- a/app/Resources/views/common/upload-image.html.twig
+++ b/app/Resources/views/common/upload-image.html.twig
@@ -19,5 +19,5 @@
     data-crop-width="{{ cropWidth }}"
     data-crop-height="{{ cropHeight }}" />
   </label>
-  <input type="hidden" name="covers" value="{{covers}}">
+  <input type="hidden" name="covers" value="">
 </div>
