feat: #231227 表格添加边框

--- a/web/static-dist/427.css
+++ b/web/static-dist/427.css
@@ -1,1 +1,1 @@
-[data-v-7827b9cb] .stem p{margin:0}[data-v-7827b9cb] .stem img{max-width:100%!important}[data-v-7827b9cb] .stem-fill-blank{padding-bottom:2px;line-height:20px;border-bottom:1px solid #999;color:#aaa}
+[data-v-569cfb9c] .stem table{width:100%;border-collapse:collapse;text-align:center}[data-v-569cfb9c] .stem table td,[data-v-569cfb9c] .stem table th{border:1px solid #333}[data-v-569cfb9c] .stem p{margin:0}[data-v-569cfb9c] .stem img{max-width:100%!important}[data-v-569cfb9c] .stem-fill-blank{padding-bottom:2px;line-height:20px;border-bottom:1px solid #999;color:#aaa}
