--- a/h5/src/h5/assets/styles/containers/course/component/questionbank.scss
+++ b/h5/src/h5/assets/styles/containers/course/component/questionbank.scss
@@ -1,462 +1,489 @@
 $common-padding: 35;
-  
+
 .time {
-  position: fixed;
-  bottom: vw(76);
-  left: 50%;
-  z-index: 2;
-  width: vw(90);
-  margin-left: vw(-45);
-  color: #fff;
-  font-size: vw(16);
-  line-height: vw(30);
-  text-align: center;
-  background: rgba(0, 0, 0, 0.2);
-  border-radius: vw(5);
+	position: fixed;
+	bottom: vw(76);
+	left: 50%;
+	z-index: 2;
+	width: vw(90);
+	margin-left: vw(-45);
+	color: #fff;
+	font-size: vw(16);
+	line-height: vw(30);
+	text-align: center;
+	background: rgba(0, 0, 0, 0.2);
+	border-radius: vw(5);
 }
-  
+
 .warn {
-  color: rgba(251, 97, 64, 1) !important;
-  background: rgba(251, 97, 64, 0.2) !important;
+	color: rgba(251, 97, 64, 1) !important;
+	background: rgba(251, 97, 64, 0.2) !important;
 }
+
 .exercise-analysis {
-  .subject-option {
-    padding-right: vw(48) !important;
-  }
+	.subject-option {
+		padding-right: vw(48) !important;
+	}
 }
-.exercise-do, 
-.exercise-analysis  {
-  .rich-text img {
-    display: block;
-    margin-bottom: vw(8);
-    width: vw(156);
-    height: vw(88);
-    border-radius: vw(6);
-  }
-  
-  .head-top {
-    display: flex;
-    justify-content: space-between;
-    margin: 0 0 vw(16) 0;
-    padding: vw(10) vw(16);
-    font-size: vw(14);
-    border-top: vw(1) solid #F6F6F6;
-    border-bottom: vw(1) solid #f5f5f5;
-    background-color: #fff;
-    .head-left {
-      color: #333;
-      font-weight: 600;
-  
-      .left-color {
-        color: #ff6700;
-        font-weight: 400;
-      }
-    }
-  
-    .head-right {
-      color: #919191;
-      font-weight: 500;
-      font-size: vw(12);
-  
-      .right-color {
-        color: #408ffb;
-        font-weight: 400;
-        font-size: vw(18);
-      }
-    }
-  }
-  
-  .one-questions-head {
-    padding: vw(16) vw(16) vw(32);
-  
-    .answer-progress {
-      color: #919399;
-    }
-    .current-num {
-      font-size: vw(18);
-      color: #37393D;
-    }
-    .total-number {
-      font-size: vw(14);
-      color: #5E6166;
-    }
-    .answer-card {
-      color: #428FFA;
-    }
-  }
 
-  .serial-number {
-    float: left;
-  }
-  .subject-material {
-    position: relative;
-    padding: vw(16) vw(48) vw(16) vw(16);
-    margin: 0 vw(16) vw(12);
-    border-radius: vw(12);
-    background: #FFF;
-    box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
-  }
-  .subject {
-    margin: 0 vw(16);
-    padding: vw(16) vw(16) vw(32);
-    border-radius: vw(12);
-    background: #FFF;
-    box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
-    
-  }
-  .subject-footer {
-    margin: vw(12) vw(16);
-    padding: vw(16) vw(16);
-    font-size: vw(14);
-    color: #919399;
-    border-radius: vw(12);
-    background: #FFF;
-    box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
+.exercise-do,
+.exercise-analysis {
+	.rich-text img {
+		display: block;
+		// margin-bottom: vw(8);
+		max-width: 100%;
+		max-height: vw(88);
+		border-radius: vw(6);
+	}
 
-    img {
-      display: block;
-      margin-bottom: vw(8);
-      width: vw(156);
-      height: vw(88);
-      border-radius: vw(6);
-    }
+	.head-top {
+		display: flex;
+		justify-content: space-between;
+		margin: 0 0 vw(16) 0;
+		padding: vw(10) vw(16);
+		font-size: vw(14);
+		background-color: #fff;
+		border-top: vw(1) solid #f6f6f6;
+		border-bottom: vw(1) solid #f5f5f5;
 
-    P {
-      color: #37393D;
-    }
-  }
-  .material-title {
-    font-size: vw(14);
-  }
-  .subject-stem {
-    color: #333;
-    font-size: vw(16);
-    line-height: vw(20);
-    word-break: break-word;
-  }
-  
-  .material-title-weight {
-    font-weight: 500 !important;
-  }
-  p {
-    margin: 0;
-  }
+		.head-left {
+			color: #333;
+			font-weight: 600;
 
-  .tags {
-    display: inline-block;
-    margin-bottom: vw(16);
-    padding: 0 vw(4);
-    width: auto;
-    height: vw(24);
-    line-height: vw(26);
-    font-size: vw(12);
-    color: #428FFA;
-    text-align: center;
-    border-radius: vw(4);
-    border: 1px solid #428FFA;
-    transform: scale(0.83,0.83) ;
-  }
-  .material-tags {
-    display: inline-block;
-    padding: 0 vw(4);
-    height: vw(24);
-    line-height: vw(26);
-    font-size: vw(12);
-    color: #428FFA;
-    text-align: center;
-    border-radius: vw(4);
-    border: 1px solid #428FFA;
-    transform: scale(0.83,0.83) ;
-  }
-  .tags-bottom {
-    margin-bottom: 0 !important;
-  }
-  .answer-paper {
-    margin-top: vw(16);
-  }
-  .subject-option {
-    min-height: vw(40);
-    margin-bottom: vw(12);
-    padding: vw(12) vw(16);
-    background-color: #F7F8FA;
-    border-radius: vw(6);
-    border: 1px solid #fff;
-  
-    &:last-of-type {
-      margin-bottom: vw(5);
-    }
-  
-    .van-checkbox__icon,
-    .van-radio__icon {
-      float: left;
-      margin-top: vw(-2);
-    }
-  
-    .subject-option__content {
-      color: #37393D;
-      font-size: vw(14);
-      word-break: break-word;
+			.left-color {
+				color: #ff6700;
+				font-weight: 400;
+			}
+		}
 
-      img {
-        display: block;
-        margin-bottom: vw(8);
-        width: vw(156);
-        height: vw(88);
-        border-radius: vw(6);
-      }
-    }
-  
-    .subject-option__order {
-      display: inline-block;
-      color: #37393D;
-      font-size: vw(14);
+		.head-right {
+			color: #919191;
+			font-weight: 500;
+			font-size: vw(12);
 
-    }
+			.right-color {
+				color: #408ffb;
+				font-weight: 400;
+				font-size: vw(18);
+			}
+		}
+	}
 
-  
-    &.subject-option--determine {
-      .van-radio__icon {
-        height: 100%;
-  
-        .subject-option__order {
-          font-size: vw(14);
-        }
-      }
-    }
-    .van-radio__label {
-      margin-left: 0;
-    }
-    .van-checkbox__label {
-      margin-left: 0;
-    }
-  }
-  .isWrong,
-  .van-checked__wrong,
-  .van-checkbox__wrong
-  {
-    color: #F53F3F !important;
-    background: #FFF5F5;
-  
-    p {
-      color: #F53F3F !important;
-    }
-  
-    .icon-cuowu2 {
-      display: block !important;
-    }
-  
-    .subject-option__content {
-      color: #F53F3F !important;
-    }
-  
-    .subject-option__order {
-      color: #F53F3F;
-    }
-  }
-  .isRight,
-  .van-checked__right,
-  .van-checkbox__right
-  {
-    color: #00B42A !important;
-    background: #F2FBF4;
-  
-    p {
-      color: #00B42A !important;
-    }
-  
-    .icon-zhengque1 {
-      display: block !important;
-    }
-    .subject-option__content {
-      color: #00B42A;
-    }
-  
-    .subject-option__order {
-      color: #00B42A;
-    }
-  }
-  .footer-shadow {
-    margin: 0 vw(32) 0;
-    height: vw(16);
-    border-radius: 0 0 vw(12) vw(12);
-    background-color: rgba(255, 255, 255, 0.60);
-  }
-  
-  .material-type {
-    color:#5E6166;
-    font-weight: 400 !important;
-  }
-  
-  .material-text {
-    display: contents;
-    height: vw(20);
-    line-height: vw(22);
-    font-weight: 500;
-  }
+	.one-questions-head {
+		padding: vw(16) vw(16) vw(32);
 
-  .fill {
-    margin: 0 vw(16);
-    padding: vw(16) vw(16) vw(32);
-    background-color: #fff;
-    border-radius: vw(12);
-    box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
-    
-    .fill-input {
-      padding: 0 !important;
-    }
+		.answer-progress {
+			color: #919399;
+		}
 
-    .fill-bank {
-      color: $primary-color;
-    }
-  
-    .field-bottom{
-      padding-bottom: vw(12) !important;
-      // border-bottom: 1px solid #e1e1e1;
-    }
+		.current-num {
+			color: #37393d;
+			font-size: vw(18);
+		}
 
-    .your-answer {
-      font-size: vw(14);
-      line-height: vw(22);
-      color: #919399;
-    }
+		.total-number {
+			color: #5e6166;
+			font-size: vw(14);
+		}
 
-    .is-right-answer {
-      font-size: vw(14);
-      line-height: vw(22);
-      color: #00B42A;
-    }
+		.answer-card {
+			color: #428ffa;
+		}
+	}
 
-    .is-wrong-answer {
-      font-size: vw(14);
-      line-height: vw(22);
-      color: #F53F3F;
-    }
+	.serial-number {
+		float: left;
+	}
 
-    .fill-subject {
-      margin-top: vw(30);
-      margin-bottom: vw(10);
-      color: $primary-color;
-      font-size: vw(14);
-    }
-  
-    ::-webkit-input-placeholder {
-      /* WebKit browsers */
-      color: #666;
-      font-size: vw(14);
-    }
-  
-    ::-moz-placeholder {
-      /* Mozilla Firefox 19+ */
-      color: #666;
-      font-size: vw(14);
-    }
-  
-    :-ms-input-placeholder {
-      /* Internet Explorer 10+ */
-      color: #666;
-      font-size: vw(14);
-    }
-  }
-  
-  .essay {
-    margin: 0 vw(16);
-    padding: vw(16) vw(16) vw(32);
-    border-radius: vw(12);
-    background: #FFF;
-    box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
-    
-    .your-answer {
-      font-size: vw(14);
-      line-height: vw(22);
-      color: #919399;
-    }
+	.subject-material {
+		position: relative;
+		margin: 0 vw(16) vw(12);
+		padding: vw(16) vw(48) vw(16) vw(16);
+		background: #fff;
+		border-radius: vw(12);
+		box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
+	}
 
-    .is-right-answer {
-      font-size: vw(14);
-      line-height: vw(22);
-      color: #00B42A;
-    }
+	.subject {
+		margin: 0 vw(16);
+		padding: vw(16) vw(16) vw(32);
+		background: #fff;
+		border-radius: vw(12);
+		box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
+	}
 
-    .is-wrong-answer {
-      font-size: vw(14);
-      line-height: vw(22);
-      color: #F53F3F;
-    }
-    
-    .van-field__body {
-      box-sizing: border-box;
-      padding: vw(10);
-      border: 1px solid #E5E6EB;
-      border-radius: vw(5);
-    }
-  
-    .essay-input {
-      padding: 0;
-    }
-  }
+	.subject-footer {
+		margin: vw(12) vw(16);
+		padding: vw(16) vw(16);
+		color: #919399;
+		font-size: vw(14);
+		background: #fff;
+		border-radius: vw(12);
+		box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
 
-  .material-stem-nowrap{
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow:ellipsis;
-  }
-  
-  .material-stem {
-    display: flex;
-    white-space: normal;
-    word-wrap: break-word;
-    .material-tags {
-      white-space: nowrap;
-    }
-  }
-  .exist-material {
-    display: block;
-    white-space: normal;
-    word-wrap: break-word;
-  }
-  
-  .one-questions-analysis {
-    margin-top: vw(32);
+		img {
+			display: block;
+			width: vw(156);
+			height: vw(88);
+			margin-bottom: vw(8);
+			border-radius: vw(6);
+		}
 
-    .analysis-answer{
-      margin-bottom: vw(8);
-      height: vw(28);
-      line-height: vw(28);
-      font-size: vw(14);
-      color: #37393D;
+		p {
+			color: #37393d;
+		}
+	}
 
-      .answer {
-        display: inline-block;
-        height: vw(22);
-        line-height: vw(22);
-        font-size: vw(14);
-      }
-      .options {
-        display: inline-block;
-        height: vw(28);
-        line-height: vw(28);
-        font-size: vw(20);
-      }
-    }
+	.material-title {
+		font-size: vw(14);
+	}
 
-  }
-  .analysis-color {
-    font-size: vw(14);
-    color: #919399;
-    word-break: break-all;
+	.subject-stem {
+		color: #333;
+		font-size: vw(16);
+		line-height: vw(20);
+		word-break: break-word;
+	}
 
-    img {
-      display: block;
-      margin-bottom: vw(8);
-      width: vw(156);
-      height: vw(88);
-      border-radius: vw(6);
-    }
+	.material-title-weight {
+		font-weight: 500 !important;
+	}
 
-    P {
-      color: #37393D;
-    }
-  }
+	p {
+		display: flex;
+		flex-wrap: wrap;
+		align-items: baseline;
+		margin: 0;
+	}
+
+	.tags {
+		display: inline-block;
+		width: auto;
+		height: vw(24);
+		margin-bottom: vw(16);
+		padding: 0 vw(4);
+		color: #428ffa;
+		font-size: vw(12);
+		line-height: vw(26);
+		text-align: center;
+		border: 1px solid #428ffa;
+		border-radius: vw(4);
+		transform: scale(0.83, 0.83);
+	}
+
+	.material-tags {
+		display: inline-block;
+		height: vw(24);
+		padding: 0 vw(4);
+		color: #428ffa;
+		font-size: vw(12);
+		line-height: vw(26);
+		text-align: center;
+		border: 1px solid #428ffa;
+		border-radius: vw(4);
+		transform: scale(0.83, 0.83);
+	}
+
+	.tags-bottom {
+		margin-bottom: 0 !important;
+	}
+
+	.answer-paper {
+		margin-top: vw(16);
+	}
+
+	.subject-option {
+		min-height: vw(40);
+		margin-bottom: vw(12);
+		padding: vw(12) vw(16);
+		background-color: #f7f8fa;
+		border: 1px solid #fff;
+		border-radius: vw(6);
+
+		&:last-of-type {
+			margin-bottom: vw(5);
+		}
+
+		.van-checkbox__icon,
+		.van-radio__icon {
+			float: left;
+			margin-top: vw(-2);
+		}
+
+		.subject-option__content {
+			color: #37393d;
+			font-size: vw(14);
+			word-break: break-word;
+
+			img {
+				display: block;
+				width: vw(156);
+				height: vw(88);
+				margin-bottom: vw(8);
+				border-radius: vw(6);
+			}
+		}
+
+		.subject-option__order {
+			display: inline-block;
+			color: #37393d;
+			font-size: vw(14);
+		}
+
+
+		&.subject-option--determine {
+			.van-radio__icon {
+				height: 100%;
+
+				.subject-option__order {
+					font-size: vw(14);
+				}
+			}
+		}
+
+		.van-radio__label {
+			margin-left: 0;
+		}
+
+		.van-checkbox__label {
+			margin-left: 0;
+		}
+	}
+
+	.isWrong,
+	.van-checked__wrong,
+	.van-checkbox__wrong {
+		color: #f53f3f !important;
+		background: #fff5f5;
+
+		p {
+			color: #f53f3f !important;
+		}
+
+		.icon-cuowu2 {
+			display: block !important;
+		}
+
+		.subject-option__content {
+			color: #f53f3f !important;
+		}
+
+		.subject-option__order {
+			color: #f53f3f;
+		}
+	}
+
+	.isRight,
+	.van-checked__right,
+	.van-checkbox__right {
+		color: #00b42a !important;
+		background: #f2fbf4;
+
+		p {
+			color: #00b42a !important;
+		}
+
+		.icon-zhengque1 {
+			display: block !important;
+		}
+
+		.subject-option__content {
+			color: #00b42a;
+		}
+
+		.subject-option__order {
+			color: #00b42a;
+		}
+	}
+
+	.footer-shadow {
+		height: vw(16);
+		margin: 0 vw(32) 0;
+		background-color: rgba(255, 255, 255, 0.6);
+		border-radius: 0 0 vw(12) vw(12);
+	}
+
+	.material-type {
+		color: #5e6166;
+		font-weight: 400 !important;
+	}
+
+	.material-text {
+		display: contents;
+		height: vw(20);
+		font-weight: 500;
+		line-height: vw(22);
+	}
+
+	.fill {
+		margin: 0 vw(16);
+		padding: vw(16) vw(16) vw(32);
+		background-color: #fff;
+		border-radius: vw(12);
+		box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
+
+		.fill-input {
+			padding: 0 !important;
+		}
+
+		.fill-bank {
+			color: $primary-color;
+		}
+
+		.field-bottom {
+			padding-bottom: vw(12) !important;
+			// border-bottom: 1px solid #e1e1e1;
+		}
+
+		.your-answer {
+			color: #919399;
+			font-size: vw(14);
+			line-height: vw(22);
+		}
+
+		.is-right-answer {
+			color: #00b42a;
+			font-size: vw(14);
+			line-height: vw(22);
+		}
+
+		.is-wrong-answer {
+			color: #f53f3f;
+			font-size: vw(14);
+			line-height: vw(22);
+		}
+
+		.fill-subject {
+			margin-top: vw(30);
+			margin-bottom: vw(10);
+			color: $primary-color;
+			font-size: vw(14);
+		}
+
+		::-webkit-input-placeholder {
+			/* WebKit browsers */
+			color: #666;
+			font-size: vw(14);
+		}
+
+		::-moz-placeholder {
+			/* Mozilla Firefox 19+ */
+			color: #666;
+			font-size: vw(14);
+		}
+
+		:-ms-input-placeholder {
+			/* Internet Explorer 10+ */
+			color: #666;
+			font-size: vw(14);
+		}
+	}
+
+	.essay {
+		margin: 0 vw(16);
+		padding: vw(16) vw(16) vw(32);
+		background: #fff;
+		border-radius: vw(12);
+		box-shadow: 0 vw(4) vw(24) 0 rgba(0, 0, 0, 0.05);
+
+		.your-answer {
+			color: #919399;
+			font-size: vw(14);
+			line-height: vw(22);
+		}
+
+		.is-right-answer {
+			color: #00b42a;
+			font-size: vw(14);
+			line-height: vw(22);
+		}
+
+		.is-wrong-answer {
+			color: #f53f3f;
+			font-size: vw(14);
+			line-height: vw(22);
+		}
+
+		.van-field__body {
+			box-sizing: border-box;
+			padding: vw(10);
+			border: 1px solid #e5e6eb;
+			border-radius: vw(5);
+		}
+
+		.essay-input {
+			padding: 0;
+		}
+	}
+
+	.material-stem-nowrap {
+		overflow: hidden;
+		white-space: nowrap;
+		text-overflow: ellipsis;
+	}
+
+	.material-stem {
+		display: flex;
+		white-space: normal;
+		word-wrap: break-word;
+
+		.material-tags {
+			white-space: nowrap;
+		}
+	}
+
+	.exist-material {
+		display: block;
+		white-space: normal;
+		word-wrap: break-word;
+	}
+
+	.one-questions-analysis {
+		margin-top: vw(32);
+
+		.analysis-answer {
+			height: vw(28);
+			margin-bottom: vw(8);
+			color: #37393d;
+			font-size: vw(14);
+			line-height: vw(28);
+
+			.answer {
+				display: inline-block;
+				height: vw(22);
+				font-size: vw(14);
+				line-height: vw(22);
+			}
+
+			.options {
+				display: inline-block;
+				height: vw(28);
+				font-size: vw(20);
+				line-height: vw(28);
+			}
+		}
+	}
+
+	.analysis-color {
+		color: #919399;
+		font-size: vw(14);
+		word-break: break-all;
+
+		img {
+			display: block;
+			// margin-bottom: vw(8);
+			max-width: 100%;
+			max-height: vw(88);
+			border-radius: vw(6);
+		}
+
+		p {
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			color: #37393d;
+		}
+	}
 }
 
 //}
