--- a/app/Resources/views/admin-v2/cloud-center/edu-cloud/live/logo-crop-modal.html.twig
+++ b/app/Resources/views/admin-v2/cloud-center/edu-cloud/live/logo-crop-modal.html.twig
@@ -18,6 +18,12 @@
       <div class="col-md-offset-2 col-md-8 controls">
         <a class="btn btn-fat btn-primary" 
         id="upload-avatar-btn" 
+        data-large-width="400"
+        data-large-height="400"
+        data-medium-width="120"
+        data-medium-height="120"
+        data-small-width="48"
+        data-small-height="48"
         data-url="{{ path('admin_v2_cloud_edulive_logo_crop', {type:type}) }}"
         data-type="{{ type }}"
         >{{'form.btn.save'|trans}}</a>
