--- a/app/Resources/static-src/app/less/common/common.less
+++ b/app/Resources/static-src/app/less/common/common.less
@@ -43,6 +43,12 @@ html.nav-active body {
     }
   }
 
+  .pc-es-filter {
+    @media (max-width: @screen-xs-max) {
+      display: none !important;
+    }
+  }
+
   .mobile-category {
     padding-bottom: 20px;
     @media (min-width: @screen-sm-min) {
@@ -66,9 +72,6 @@ html.nav-active body {
 #content-container {
   margin: 30px auto;
   min-height: 400px;
-  @media (max-width: @screen-xs-max) {
-    display: none !important;
-  }
   .live-course-btn {
     padding: 6px 16px;
     color: @brand-primary !important;
