--- a/app/Resources/views/default/header/logo.html.twig
+++ b/app/Resources/views/default/header/logo.html.twig
@@ -7,7 +7,7 @@
     <div class="nav-mobile">
       <form class="navbar-form" action="{{ path('search') }}" method="get">
         <div class="form-group">
-          <input class="form-control" placeholder="{{'homepage.header.search'|trans}}" name="q">
+          <input class="form-control" style="width: 100%;" placeholder="{{'homepage.header.search'|trans}}" name="q">
           <button class="button es-icon es-icon-search"></button>
         </div>
       </form>
