--- a/app/Resources/views/course-set/explore.html.twig
+++ b/app/Resources/views/course-set/explore.html.twig
@@ -19,12 +19,6 @@
 {% endblock %}
 
 {% block top_content %}
-<style>
-#content-container {
-  min-height: 0 !important;
-  margin: 0 !important;
-}
-</style>
   {# {% if mobile %} #}
     <div id="app"></div>
   {# {% endif %} #}
@@ -150,7 +144,7 @@
       {% endif %}
     </div>
   </div>
-  <nav class="text-center">{{ web_macro.paginator(paginator) }}</nav>
+  <nav class="text-center mobile-pagination-hide">{{ web_macro.paginator(paginator) }}</nav>
 {% endblock %}
 
 {% block bottom %}
