feat: #240124 修改图灵样式

--- a/app/Resources/static-src/app/less/common/common.less
+++ b/app/Resources/static-src/app/less/common/common.less
@@ -76,10 +76,11 @@ html.nav-active body {
 }
 
 #content-container {
-  min-height: 0 !important;
-  margin: 0 !important;
+  margin: 30px auto;
+  min-height: 400px;
   @media (max-width: @screen-xs-max) {
-    display: none;
+    min-height: 0 !important;
+    margin: 0 !important;
   }
   .live-course-btn {
     padding: 6px 16px;
