feat: #240129 提交弹窗代码

--- a/app/Resources/static-src/app/less/main.less
+++ b/app/Resources/static-src/app/less/main.less
@@ -175,6 +175,7 @@
 @import "page/question-manage/questions-import-modal.less"; // 导入题目模态框样式
 @import "page/question-manage/administrator-import-modal.less"; // 管理员视角弹框
 @import "page/question-manage/non-administrator-perspective-modal.less"; // 非管理员视角
+@import "page/task/app-modal.less";
 // 针对国际化的样式修改
 @import "es-en/es-en.less";
 @import "page/information-collect.less";
