--- a/app/Resources/static-src/app/less/admin-v2/layout.less
+++ b/app/Resources/static-src/app/less/admin-v2/layout.less
@@ -205,6 +205,7 @@ body {
   .change-version-btn {
     height: 60px;
     line-height: 60px;
+    margin-right: 28px;
 
     .icon-home {
       margin-right: 2px;
