--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -16,7 +16,9 @@
     <span>后学习</span>
   </div>
   <div class="download-app">
-    <img class="download-app-qrcode" src="http://edusoho.local/common/qrcode?text=http%3A//edusoho.local/qrcode/parse/23cac088be7411ee80dec9268d2d11fc" />
+    <div class="download-app-qrcode">
+      <canvas class="js-download-app-qrcode"></canvas>
+    </div>
   </div>
   </div>
 {% endblock %}
