--- a/app/Resources/static-src/app/less/page/task/app-modal.less
+++ b/app/Resources/static-src/app/less/page/task/app-modal.less
@@ -50,11 +50,10 @@
         margin: 12px auto;
         border-radius: 12px;
         background-color: white;
-        border: 1px solid #F0F0F2;
         box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.05);
 
         .download-app-qrcode {
-          padding: 6px;
+          padding: 12px 12px 6px 12px;
           border: 1px solid #F0F0F2;
           border-radius: 12px;
         }
