--- a/app/Resources/static-src/app/less/v2/page/order-center.less
+++ b/app/Resources/static-src/app/less/v2/page/order-center.less
@@ -57,6 +57,7 @@
     font-size: 12px;
     height: 22px;
     margin-bottom: 4px;
+    display: flex;
     &__title {
       width: 54px;
       text-align: right;
