--- a/app/Resources/static-src/app/less/page/task/app-modal.less
+++ b/app/Resources/static-src/app/less/page/task/app-modal.less
@@ -53,7 +53,7 @@
         box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.05);
 
         .download-app-qrcode {
-          padding: 12px 12px 6px 12px;
+          height: 100%;
           border: 1px solid #F0F0F2;
           border-radius: 12px;
         }
