--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -17,6 +17,7 @@
   </div>
   <div class="download-app">
     <div class="download-app-qrcode">
+    {# <img class="js-download-app-qrcode" style="width: 100%;border-radius: 12px;" src="{{ path('mobile_download_qrcode',{code:mobileCode}) }}" alt=""> #}
     <img class="js-download-app-qrcode" style="width: 100%;border-radius: 12px;" src="/mobile/downloadQrcode?code=zhixiang" alt="">
       {# <canvas class="js-download-app-qrcode"></canvas> #}
     </div>
