fix: #102933 响应式微网校判断是否渲染

--- a/app/Resources/views/course-set/explore.html.twig
+++ b/app/Resources/views/course-set/explore.html.twig
@@ -19,9 +19,9 @@
 {% endblock %}
 
 {% block top_content %}
-  {# {% if mobile %} #}
-    <div id="app"></div>
-  {# {% endif %} #}
+  <div id="app"></div>
+  <input type="hidden" name="isWeixin" id="isWeixin" value="{{ isWxClient }}">
+  <input type="hidden" name="isMobile" id="isMobile" value="{{ isMobileClient }}">
   <input type="hidden" name="categoryId" id="categoryId" value="{{ app.request.query.get('categoryId') }}">
   <input type="hidden" name="type" id="type" value="{{ app.request.query.get('type', 'all') }}">
   <input type="hidden" name="sort" id="sort" value="{{ app.request.query.get('sort', 'recommendedSeq') }}">
