fix: #103086 解决证书上传图片不能上传

--- a/app/Resources/views/admin-v2/operating/certificate-template/manage/step-three.html.twig
+++ b/app/Resources/views/admin-v2/operating/certificate-template/manage/step-three.html.twig
@@ -36,6 +36,7 @@
           imageClass: isHorizontal ? 'certificate-horizontal-basemap' : 'certificate-vertical-basemap',
           imageText: 'admin.operation_certificate.template.basemap.upload'|trans,
           imageSrc: basemap,
+          coversName: 'bigCovers'
         } %}
         <p class="help-block">{{ hint|trans }}</p>
       </div>
