fix: #102042 商品名称过长，把title挤到第二行

--- a/app/Resources/static-src/app/less/v2/page/order-center.less
+++ b/app/Resources/static-src/app/less/v2/page/order-center.less
@@ -58,6 +58,7 @@
     height: 22px;
     margin-bottom: 4px;
     display: flex;
+    flex-wrap: nowrap;
     &__title {
       width: 58px;
       text-align: right;
@@ -68,7 +69,7 @@
     &__content {
       margin-left: 4px;
       color: @cd-dark-major;
-      max-width: 250px;
+      max-width: 210px;
       .cd-text-overflow(inline-block);
       @media(max-width: @screen-xs-max) {
         max-width: 160px;
