fix: #240228 修改上传网站logo后，图片展示的大小，限制宽度250

--- a/app/Resources/views/admin-v2/system/school-information.html.twig
+++ b/app/Resources/views/admin-v2/system/school-information.html.twig
@@ -5,6 +5,17 @@
 {% set script_controller = 'setting/site' %}
 
 {% block main %}
+<style>
+#site-favicon-container > img {
+  max-width: 250px;
+  margin-bottom: 10px;
+}
+
+#site-logo-container > img {
+  max-width: 250px;
+  margin-bottom: 10px;
+}
+</style>
 
   {{ web_macro.flash_messages() }}
 
