feat: #240308 上传仅在app学习代码

--- a/app/Resources/views/goods/show.html.twig
+++ b/app/Resources/views/goods/show.html.twig
@@ -4,7 +4,15 @@
 
 {% block title %}{{ goods.title|raw }} - {{ parent() }}{% endblock %}
 {% block full_content %}
-  
+<style>
+.description-content > ul {
+  list-style: disc !important;
+}
+
+.description-content > ol {
+  list-style: auto !important;
+}
+</style>
   {% include 'common/anti-brush-captcha.html.twig' %}
 
   <div id="show-product-page" class="" style=""
