feat: #102132 mobile code

--- a/app/Resources/views/course/task-list/parts/task-course-data.html.twig
+++ b/app/Resources/views/course/task-list/parts/task-course-data.html.twig
@@ -46,4 +46,10 @@
   }
 </div>
 
+<div class="hidden js-hidden-setting">
+  {
+    "onlyLearnInApp": "{{ setting('course.only_learning_on_APP', 0) }}"
+  }
+</div>
+
 <div class="hidden js-hidden-current-timestamp">{{ date().timestamp }}</div>
