--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -17,9 +17,7 @@
   </div>
   <div class="download-app">
     <div class="download-app-qrcode">
-    {# <img class="js-download-app-qrcode" style="width: 100%;border-radius: 12px;" src="{{ path('mobile_download_qrcode',{code:mobileCode}) }}" alt=""> #}
-    <img class="js-download-app-qrcode" style="width: 100%;border-radius: 12px;" src="/mobile/downloadQrcode?code=zhixiang" alt="">
-      {# <canvas class="js-download-app-qrcode"></canvas> #}
+    <img class="js-download-app-qrcode" style="width: 100%;border-radius: 12px;" src="{{ path('mobile_download_qrcode', {code: mobileCode}) }}" alt="">
     </div>
   </div>
   </div>
@@ -27,7 +25,7 @@
 
 {% block footer %}
 <div class="modal-guide flex justify-center items-center">
-  <img class="mobile-wechat-qrcode" src="{{ asset('static-dist/app/img/task/wechat-qrcode.png') }}" />
+  <img class="mobile-wechat-qrcode" src="{{ asset('static-dist/app/img/task/wechat-qrcode.png') }}" alt="" />
   <div class="flex flex-col items-start ml8">
   <span>打开微信</span>
   <span>扫一扫</span>
