--- a/web/activities/video/resources/views/show/index.html.twig
+++ b/web/activities/video/resources/views/show/index.html.twig
@@ -28,7 +28,7 @@
 {% elseif video.mediaSource|default('self') == 'iframe' %}
   <div id="task-preview-iframe" class="iframe-parent-content iframe-parent-full">
     <iframe src="{{ video.mediaUri }}" style="height:100%; width:100%; border:0px; overflow: hidden"
-            scrolling="no"></iframe>
+            scrolling="no" allowfullscreen></iframe>
   </div>
 {% else %}
   <div class="dashboard-body">
