feat: #94700 课程分类拖动加背景颜色

--- a/app/Resources/views/question-bank/question-category/index.html.twig
+++ b/app/Resources/views/question-bank/question-category/index.html.twig
@@ -27,6 +27,15 @@
   .js-category-body {
     border-bottom: 1px solid #d8d8d8;
   }
+
+  .js-sortable-item > .row-expand {
+    display: flex;
+    align-items: center;
+  }
+
+  .js-sortable-item:active {
+    background: #FCFFC0;
+  }
 </style>
 
   <div class="panel panel-default panel-col">
