--- a/app/Resources/views/question-bank/question-category/index.html.twig
+++ b/app/Resources/views/question-bank/question-category/index.html.twig
@@ -24,10 +24,6 @@
     z-index: 2000;
   }
 
-  .js-category-body {
-    border-bottom: 1px solid #d8d8d8;
-  }
-
   .js-sortable-item > .row-expand {
     display: flex;
     align-items: center;
@@ -35,6 +31,23 @@
 
   .js-sortable-item:active {
     background: #FCFFC0;
+  }
+
+  .table-striped {
+    margin-top: 10px;
+    margin-bottom: 0 !important;
+  }
+
+  .table-striped > thead {
+    border-top: 1px solid #d8d8d8;
+  }
+
+  .js-sortable-list > li {
+    border-top: 1px solid #d8d8d8;
+  }
+
+  table > thead > tr > th {
+    border-bottom: 1px solid #ddd !important;
   }
 </style>
 
