--- a/app/Resources/views/my/learning/classroom/classroom.html.twig
+++ b/app/Resources/views/my/learning/classroom/classroom.html.twig
@@ -14,8 +14,8 @@
 }
 </style>
 <div class="panel panel-default panel-col lesson-manage-panel">
-  <div id="app"></div>
-  {# <div class="panel-heading">
+  {% if is_mobile_client() %}
+  <div class="panel-heading">
     {{'my.learning.classroom'|trans({'%name%':setting('classroom.name')|default('classroom'|trans)})}}
     <form class="search-form pull-right" style="margin-right: 34px;" method="get">
       <input class="search-input-content inline-block" type="text" name="title" value="{{ app.request.get("title") }}" placeholder="{{ 'course.placeholder.name'|trans }}" />
@@ -24,7 +24,7 @@
   </div>
 
   <div class="panel-body">
-      {% include 'my/learning/classroom/nav-pill.html.twig' %}
+      {# {% include 'my/learning/classroom/nav-pill.html.twig' %} #}
     <ul class="course-wide-list">
       {% for classroom in classrooms if classroom %}
         <li class="my-course-item my-course-item--classroom cd-mb16 clearfix">
@@ -81,7 +81,10 @@
         <div class="empty">{{'my.learning.classroom.not_join_classroom'|trans({'%name%':setting('classroom.name')|default('classroom'|trans)})}}</div>
       {% endfor %}
     </ul>
-  </div> #}
+  </div>
+  {% else %}
+		<div id="app"></div>
+	{% endif %}
 </div>
 
 {% endblock %}
