--- a/web/activities/exercise/resources/views/show/index.html.twig
+++ b/web/activities/exercise/resources/views/show/index.html.twig
@@ -1,6 +1,8 @@
 {% extends 'layout.html.twig' %}
 {% set exercise = activity.ext|default(null) %}
-{% set assessment = create_exercise_assessment(activity) %}
+{% if not questionLack|default(false) %}
+  {% set assessment = create_exercise_assessment(activity) %}
+{% endif %}
 {% do script(['exerciseactivity/js/exercise_info_modal/index.js'],300) %}
 
 {% block body %}
