fix: #240321 注释仅在app学习相关代码

--- a/app/Resources/views/course/task-list/parts/task-course-data.html.twig
+++ b/app/Resources/views/course/task-list/parts/task-course-data.html.twig
@@ -48,7 +48,8 @@
 
 <div class="hidden js-hidden-setting">
   {
-    "onlyLearnInApp": "{{ setting('course.only_learning_on_APP', 0) }}"
+{#    "onlyLearnInApp": "{{ setting('course.only_learning_on_APP', 0) }}"#}
+    "onlyLearnInApp": "0"
   }
 </div>
 
