--- a/web/activities/video/resources/views/show/index.html.twig
+++ b/web/activities/video/resources/views/show/index.html.twig
@@ -43,7 +43,7 @@
 
       {% else %}
         <iframe src="{{ activity.ext.mediaUri }}" style="height:100%; width:100%; border:0; overflow: hidden"
-                scrolling="no"></iframe>
+                scrolling="no" allowfullscreen></iframe>
       {% endif %}
     </div>
   </div>
