--- a/app/Resources/views/order/show/course-item.html.twig
+++ b/app/Resources/views/order/show/course-item.html.twig
@@ -5,7 +5,7 @@
   <div class="order-center-card clearfix">
     <div class="order-center-card__img">
       <a href="{{ path(product.backUrl.routing, product.backUrl.params) }}">
-        <img src="{{ filepath(product.cover.middle|default(''), 'courseSet.png') }}" alt="{{ product.title }}">
+        <img src="{{ filepath(product.cover.middle|default(''), 'course.png') }}" alt="{{ product.title }}">
       </a>
     </div>
     <div class="order-center-card__info">
