feat: #103581 首页的settings接口汇总

--- a/h5/src/h5/assets/styles/containers/my/index.scss
+++ b/h5/src/h5/assets/styles/containers/my/index.scss
@@ -13,8 +13,8 @@
 
 		.user-vip-icon {
 			position: absolute;
-			right: vw(5);
-			bottom: vw(5);
+			right: 0;
+			bottom: 0;
 			width: vw(20);
 			height: vw(20);
 		}
