--- a/app/Resources/views/course-manage/student/set-deadline-modal.html.twig
+++ b/app/Resources/views/course-manage/student/set-deadline-modal.html.twig
@@ -57,6 +57,7 @@
     <div class="empty">{{dict_text('courseStatus', course.status)}}{{'course.members_manage.official_student.add_expiry_day.failed_tips'|trans}}{{ 'site.default.student'|trans }} {{'course.members_manage.official_student.add_expiry_day.publish_tips'|trans}}</div>
   {% endif %}
   <input type="hidden" name="_csrf_token" value="{{ csrf_token('site') }}">
+  <input type="hidden" name="all" value="{{ all|default('') }}">
 </form>
 {% endblock %}
 
