--- a/app/Resources/views/admin-v2/system/course-setting/course-setting.html.twig
+++ b/app/Resources/views/admin-v2/system/course-setting/course-setting.html.twig
@@ -154,15 +154,15 @@
       </div>
     </div>
 
-{#    <div class="form-group">#}
-{#      <div class="col-md-3 control-label">#}
-{#        <label>{{'admin.setting_course.Only_available_for_learning_on_APP'|trans}}</label>#}
-{#      </div>#}
-{#      <div class="controls col-md-8 radios">#}
-{#        {{ radios('only_learning_on_APP', {1:'admin.setting_course.open'|trans, 0:'admin.setting_course.closed'|trans}, courseSetting.only_learning_on_APP) }}#}
-{#        <div class="help-block">{{ 'admin.setting_course.Only_available_for_learning_on_APP_tips'|trans }}</div>#}
-{#      </div>#}
-{#    </div>#}
+    <div class="form-group">
+      <div class="col-md-3 control-label">
+        <label>{{'admin.setting_course.Only_available_for_learning_on_APP'|trans}}</label>
+      </div>
+      <div class="controls col-md-8 radios">
+        {{ radios('only_learning_on_APP', {1:'admin.setting_course.open'|trans, 0:'admin.setting_course.closed'|trans}, courseSetting.only_learning_on_APP) }}
+        <div class="help-block">{{ 'admin.setting_course.Only_available_for_learning_on_APP_tips'|trans }}</div>
+      </div>
+    </div>
 
     <div class="form-group">
       <div class="col-md-3 control-label">
