--- a/app/Resources/views/my/learning/course/learning.html.twig
+++ b/app/Resources/views/my/learning/course/learning.html.twig
@@ -1,5 +1,7 @@
 {% extends 'my/learning/course/layout.html.twig' %}
-{% do script(['app/js/tab/course-tab/index.js'])  %}
+{% if not is_mobile_client() %}
+  {% do script(['app/js/tab/course-tab/index.js']) %}
+{% endif %}
 {% set mobile = is_show_mobile_page() %}
 {% set tab_nav = 'learning' %}
 {% block title %}{{ 'my.learning.course.learning'|trans }} - {{ parent() }}{% endblock %}
@@ -7,31 +9,31 @@
 {% block main %}
 
   <div class="panel panel-default panel-col">
-{% if is_mobile_client() %}
-    <div class="panel-heading">
-      {{ 'my.learning.course'|trans }}
-      <a class="btn cd-btn cd-btn-info cd-btn-sm pull-right" href="{{ path('my_courses_live_calendar') }}">{{ 'my.learning.live_schedule_menu'|trans }}</a>
-    </div>
+    {% if is_mobile_client() %}
+      <div class="panel-heading">
+        {{ 'my.learning.course'|trans }}
+        <a class="btn cd-btn cd-btn-info cd-btn-sm pull-right" href="{{ path('my_courses_live_calendar') }}">{{ 'my.learning.live_schedule_menu'|trans }}</a>
+      </div>
 
-    <div class="panel-body">
-      {% include 'my/learning/course/nav-pill.html.twig' %}
-      {% set type = 'learning' %}
+      <div class="panel-body">
+        {% include 'my/learning/course/nav-pill.html.twig' %}
+        {% set type = 'learning' %}
 
-      {% for courseSet in courseSets if courseSet %}
-        {% set currentCourses = courses[courseSet.id] %}
-        {% set classroom = courseSet['classroom']|default(null) %}
+        {% for courseSet in courseSets if courseSet %}
+          {% set currentCourses = courses[courseSet.id] %}
+          {% set classroom = courseSet['classroom']|default(null) %}
 
-        {% if currentCourses %}
-          {% include 'my/learning/course/courses-block-item.html.twig' %}
-        {% endif %}
-      {% else %}
-        <div class="cd-empty">{{ 'my.learning.course.learning_empty'|trans }}</div>
-      {% endfor %}
-      {{ web_macro.paginator(paginator) }}
-    </div>
+          {% if currentCourses %}
+            {% include 'my/learning/course/courses-block-item.html.twig' %}
+          {% endif %}
+        {% else %}
+          <div class="cd-empty">{{ 'my.learning.course.learning_empty'|trans }}</div>
+        {% endfor %}
+        {{ web_macro.paginator(paginator) }}
+      </div>
     {% else %}
-		<div id="app"></div>
-	{% endif %}
+      <div id="app"></div>
+    {% endif %}
   </div>
 {% endblock %}
 
@@ -44,4 +46,3 @@
 {% block bottom %}
   {% include 'mobile/footer-tool-bar.html.twig' with { mobile_tool_bar: 'learning' } %}
 {% endblock %}
-
