feat: #102118 新增获取仅限在app学习配置

--- a/app/Resources/views/course/task-list/parts/task-course-data.html.twig
+++ b/app/Resources/views/course/task-list/parts/task-course-data.html.twig
@@ -48,8 +48,7 @@
 
 <div class="hidden js-hidden-setting">
   {
-{#    "onlyLearnInApp": "{{ setting('course.only_learning_on_APP', 0) }}"#}
-    "onlyLearnInApp": "0"
+    "onlyLearnInApp": "{{ setting('course.only_learning_on_APP', 0) }}"
   }
 </div>
 
