feat: #102131 仅限app中间页

--- a/app/Resources/views/task/app-modal.html.twig
+++ b/app/Resources/views/task/app-modal.html.twig
@@ -1,4 +1,7 @@
+
 {% extends 'bootstrap-modal-layout.html.twig' %}
+
+{% do script(['app/js/task/app-modal/index.js']) %}
 
 {% set modal_class = 'cd-modal-dialog task-only-app-modal' %}
 
@@ -10,16 +13,16 @@
   <div>
   <div class="modal-intro">
     <span>
-      请下载
+      请下载 /
     </span>
-    <span class="modal-app">知享学堂App</span>
+    <span class="modal-app">打开App</span>
     <span>后学习</span>
   </div>
   <div class="download-app">
     <div class="download-app-qrcode">
-    <img class="js-download-app-qrcode" style="width: 100%;border-radius: 12px;" src="{{ path('mobile_download_qrcode', {code: mobileCode}) }}" alt="">
+      <canvas class="qrcode-canvas"></canvas>
     </div>
-  </div>
+  </div> 
   </div>
 {% endblock %}
 
